# mz_raport

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: eda_demografia_powiaty.ipynb  eda_demografia_wojewodztwa.ipynb  eda_problemy_zdrowotne_icd10.ipynb  eda_statystyki_porad.ipynb  eda_statystyki_zakresow_produktow.ipynb  eda_swiad_pow.ipynb  eda_swiad_woj.ipynb  eda_teleporady.ipynb  geojson.ipynb  notebook.ipynb
src/: __init__.py  analysis_icd10_top_problems.py  analysis_icd10_top_problems_time.py  analysis_populacja_na_poradnie_geo.py  analysis_poradnie_pow_geo.py  analysis_poradnie_woj_geo.py  analysis_poradnie_woj_time.py  analysis_porady_na_poradnie_geo.py  main.py
src/helpers/: config.py  matplotlib_utils.py  utils.py
